kubernetes/environments/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ewallet-dev
  labels:
    env: dev
    app: ewallet
---
apiVersion: v1
kind: Namespace
metadata:
  name: wasteco-dev
  labels:
    env: dev
    app: wasteco
---
apiVersion: v1
kind: Namespace
metadata:
  name: resolva-dev
  labels:
    env: dev
    app: resolva
